--- a/goumai1.html
+++ b/goumai1.html
@@ -22,12 +22,12 @@
     <div class="Nnr">
         <div class="Nxxk">
             <ul>
-                <li class="active">集群管理</li>
-                <li>学习资料</li>
-                <li>分类管理</li>
-                <li>账户管理</li>
-                <li>资源管理</li>
-                <li>购买记录</li>
+                <li><a href="jqgl.html">集群管理</a></li>
+                <li><a href="xuexiziliao.html">学习资料</a></li>
+                <li><a href="fenleiguanli.html">分类管理</a></li>
+                <li><a href="usermanage.html">账户管理</a></li>
+                <li><a href="ziyuanguanli1.html">资源管理</a></li>
+                <li class="active"><a href="goumai1.html">购买记录</a></li>
             </ul>
         </div>
         <div class="Nh">
