--- a/xuexiziliao.html
+++ b/xuexiziliao.html
@@ -54,7 +54,8 @@
                             <td>实验一  基本操作实验</td>
                             <td>熟悉大数据实验一体机并了解如何搭建集群;</td>
                             <td>实验手册</td>
-                            <td><button class="Cyj_sou">下载</button></td>
+                            
+                            <td><a href="xxzl.html"><button class="Cyj_sou">下载</button></td></a>
                             <td class="Cyj_first"><button class="Cyj_sou" style="background-color: #f4f4f4; margin-right:20px;">删除</button>
                                 <button class="Cyj_gai" style="cursor: pointer">修改</button></td>
                         </tr>
