--- a/ziyuanguanli1.html
+++ b/ziyuanguanli1.html
@@ -34,38 +34,39 @@
         <div class="Nh">
             <div class="Cyj_content">
                 <div class="Cyj_title">
-                    <h2>订单管理</h2>
+                    <h2 style="font-size: 14px;font-weight: bolder;">订单管理</h2>
                 </div>
                 <div class="Cyj_search">
-                    <h2>服务类型</h2>
-                    <select>
+                    <h2 style="font-weight: normal;">服务类型</h2>
+                    <select style="font-size: 14px; color:rgba(0,0,0,0.4);">
                         <option value ="volvo">所有</option>
                         <option value ="saab">购买</option>
                         <option value="opel">奖励</option>
 
                     </select>
-                    <h3>服务使用状态</h3>
-                    <select>
+                    <h3 style="font-size: 14px;font-weight: normal;">服务使用状态</h3>
+                    <select style="font-size: 14px;color:rgba(0,0,0,0.4);">
                         <option value ="volvo">所有</option>
                         <option value ="saab">购买</option>
                         <option value="opel">奖励</option>
 
                     </select>
-                    <h3>发票状态</h3>
-                    <select>
+                    <h3 style="font-size: 14px;font-weight: normal;">发票状态</h3>
+                    <select style="font-size: 14px;color:rgba(0,0,0,0.4);">
                         <option value ="volvo">所有</option>
                         <option value ="saab">购买</option>
                         <option value="opel">奖励</option>
 
                     </select>
-                    <h3>日期</h3>
+                    <h3 style="font-size: 14px;font-weight: normal;">日期</h3>
                     <div class="Zyx_content3">
 
                     </div>
-                    <div class="Zyx_content4">
-                        <h3>搜索记录</h3>
+                    <button class="Zyx_content4">搜索记录</button>
+                    <!-- <div class="Zyx_content4">
+                        <h3 style="font-size: 14px;">搜索记录</h3>
 
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -135,7 +136,20 @@
 
                     </tr>
                 </table>
-                <div class="Zyx_content_three">
+                <div class="Cyj_bottom">
+                    <ul>
+                        <li class="Cyj_one">上一页</li>
+                        <li style="background-color: #4381e6;color: #fff">1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li style="border:none;">......</li>
+                        <li>9</li>
+                        <li>10</li>
+                        <li class="Cyj_one">下一页</li>
+                        <li class="Cyj_two">尾页</li>
+                    </ul>
+                </div>
+                <!-- <div class="Zyx_content_three">
                     <div class="Zyx_box1"><h3>上一页</h3></div>
                     <div class="Zyx_box2 hot ac"><h3>1</h3></div>
                     <div class="Zyx_box2"><h3>2</h3></div>
@@ -145,7 +159,7 @@
                     <div class="Zyx_box2"><h3>10</h3></div>
                     <div class="Zyx_box1"><h3>下一页</h3></div>
                     <div class="Zyx_box3"><h3>尾页</h3></div>
-                </div>
+                </div> -->
             </div>
             </div>
 
