--- a/usermanage.html
+++ b/usermanage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>公共样式</title>
+    <title>账户管理</title>
     <link rel="stylesheet" href="css/usermanage.css">
 
 
@@ -35,7 +35,7 @@
         <div class="Nh">
             <div class="Cyj_content">
                 <div class="Cyj_title">
-                    <h2>账户管理/用户列表</h2>
+                    <h2 style="font-size: 14px;">账户管理/用户列表</h2>
                 </div>
                 <div class="GZC_big-box">
                     <div class="GZC_login_name">
@@ -76,7 +76,20 @@
                     <div class="b9 a">操作</div>
                 </div>
                 <div class="big-form">没有找到匹配的记录！</div>
-                <div class="page">
+                <div class="Cyj_bottom">
+                    <ul>
+                        <li class="Cyj_one">上一页</li>
+                        <li style="background-color: #4381e6;color: #fff">1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li style="border:none;">......</li>
+                        <li>9</li>
+                        <li>10</li>
+                        <li class="Cyj_one">下一页</li>
+                        <li class="Cyj_two">尾页</li>
+                    </ul>
+                </div>
+                <!-- <div class="page">
                     <div class="fenye">
                         <div class="on">上一页</div>
                         <div class="one">1</div>
@@ -88,8 +101,7 @@
                         <div class="down">下一页</div>
                         <div class="end">尾页</div>
                     </div>
-
-                </div>
+                </div> -->
             </div>
         </div>
 
