--- a/xxxq.html
+++ b/xxxq.html
@@ -24,8 +24,8 @@
         <div class="Nnr">
         <div class="Nxxk">
             <ul>
-                <li class="active"><a href="jqgl.html">集群管理</a></li>
-                <li><a href="xuexiziliao.html">学习资料</a></li>
+                <li ><a href="jqgl.html">集群管理</a></li>
+                <li class="active"><a href="xuexiziliao.html">学习资料</a></li>
                 <li><a href="fenleiguanli.html">分类管理</a></li>
                 <li><a href="usermanage.html">账户管理</a></li>
                 <li><a href="ziyuanguanli1.html">资源管理</a></li>
