--- a/xuexiziliao.html
+++ b/xuexiziliao.html
@@ -28,7 +28,7 @@
                 <li><a href="usermanage.html">账户管理</a></li>
                 <li><a href="ziyuanguanli1.html">资源管理</a></li>
                 <li><a href="goumai1.html">购买记录</a></li>
-            </ul>
+            </ul>   
         </div>
         <div class="Cyj_right">
             <div class="Cyj_content">
@@ -42,7 +42,7 @@
                     <button class="Cyj_add">添加</button>
                 </div>
                 <div class="Cyj_center">
-                    <table cellspacing="0" >
+                    <table cellspacing="0">
                         <tr>
                             <td>名称</td>
                             <td>介绍</td>
@@ -51,29 +51,43 @@
                             <td class="Cyj_first">操作</td>
                         </tr>
                         <tr>
-                            <td>实验一  基本操作实验</td>
+                            <td>实验一 基本操作实验</td>
                             <td>熟悉大数据实验一体机并了解如何搭建集群;</td>
                             <td>实验手册</td>
-                            
-                            <td><a href="xxzl.html"><button class="Cyj_sou">下载</button></td></a>
-                            <td class="Cyj_first"><button class="Cyj_sou" style="background-color: #f4f4f4; margin-right:20px;">删除</button>
-                                <button class="Cyj_gai" style="cursor: pointer">修改</button></td>
+                            <td>
+                                <button class="Cyj_down">下载</button>
+                            </td>
+                            <td class="Cyj_first">
+                                <button class="Cyj_del" style="background-color: #f4f4f4; margin-right:20px;">删除
+                                </button>
+                                <button class="Cyj_gai" style="cursor: pointer">修改</button>
+                            </td>
                         </tr>
                         <tr>
-                            <td>实验一  基本操作实验</td>
+                            <td>实验一 基本操作实验</td>
                             <td>熟悉大数据实验一体机并了解如何搭建集群;</td>
                             <td>教材配套PPT</td>
-                            <td><button class="Cyj_sou">下载</button></td>
-                            <td class="Cyj_first"><button class="Cyj_sou" style="background-color: #f4f4f4; margin-right:20px;">删除</button>
-                                <button class="Cyj_gai" style="cursor: pointer">修改</button></td>
+                            <td>
+                                <button class="Cyj_down">下载</button>
+                            </td>
+                            <td class="Cyj_first">
+                                <button class="Cyj_del" style="background-color: #f4f4f4; margin-right:20px;">删除
+                                </button>
+                                <button class="Cyj_gai" style="cursor: pointer">修改</button>
+                            </td>
                         </tr>
                         <tr>
-                            <td class="Cyj_last">实验一  基本操作实验</td>
+                            <td class="Cyj_last">实验一 基本操作实验</td>
                             <td class="Cyj_last">熟悉大数据实验一体机并了解如何搭建集群;</td>
                             <td class="Cyj_last">教材配套PPT</td>
-                            <td class="Cyj_last"><button class="Cyj_sou">下载</button></td>
-                            <td class="Cyj_last Cyj_first"><button class="Cyj_sou" style="background-color: #f4f4f4; margin-right:20px;">删除</button>
-                                <button class="Cyj_gai" style="cursor: pointer">修改</button></td>
+                            <td class="Cyj_last">
+                                <button class="Cyj_down">下载</button>
+                            </td>
+                            <td class="Cyj_last Cyj_first">
+                                <button class="Cyj_del" style="background-color: #f4f4f4; margin-right:20px;">删除
+                                </button>
+                                <button class="Cyj_gai" style="cursor: pointer">修改</button>
+                            </td>
                         </tr>
                     </table>
                 </div>
@@ -112,23 +126,23 @@
         <li>
             <h3>一级分类</h3>
             <!--<input type="text">-->
-            <select name="" id=""  style="color: rgba(0,0,0,0.3);">
+            <select name="" id="" style="color: rgba(0,0,0,0.3);">
                 <option value="">实验手册</option>
                 <option value="">材料配套PPT</option>
                 <option value="">实验视频</option>
                 <option value="">相关下载</option>
             </select>
         </li>
-        <li><h3>二级分类</h3><select name="" id=""  style="color: rgba(0,0,0,0.3);">
+        <li><h3>二级分类</h3><select name="" id="" style="color: rgba(0,0,0,0.3);">
             <option value="">基本操作</option>
         </select></li>
-        <li><h3>三级分类</h3><select name="" id=""  style="color: rgba(0,0,0,0.3);">
+        <li><h3>三级分类</h3><select name="" id="" style="color: rgba(0,0,0,0.3);">
             <option value="">大数据实验一体化基本</option>
         </select></li>
-        <li><h3>添   加</h3></li>
+        <li><h3>添 加</h3></li>
     </ul>
 </div>
-<div class="Cyj_zhezhao">
+<div class="Cyj_zhezhao Cyj_zhezhao1">
     <h2>资料修改
         <img style="cursor: pointer;" src="img/close.png" alt="">
     </h2>
@@ -143,41 +157,110 @@
             <h3>介绍</h3><textarea name="" id="" cols="30" rows="10"></textarea>
         </li>
         <li><h3>一级分类</h3>
-            <select name="" id=""  style="color: rgba(0,0,0,0.3);">
-            <option value="">实验手册</option>
-            <option value="">材料配套PPT</option>
-            <option value="">实验视频</option>
-            <option value="">相关下载</option>
-        </select></li>
+            <select name="" id="" style="color: rgba(0,0,0,0.3);">
+                <option value="">实验手册</option>
+                <option value="">材料配套PPT</option>
+                <option value="">实验视频</option>
+                <option value="">相关下载</option>
+            </select></li>
         <li><h3>二级分类</h3>
-            <select name="" id=""  style="color: rgba(0,0,0,0.3);">
-            <option value="">基本操作</option>
-        </select></li>
+            <select name="" id="" style="color: rgba(0,0,0,0.3);">
+                <option value="">基本操作</option>
+            </select></li>
         <li><h3>三级分类</h3>
-            <select name="" id=""  style="color: rgba(0,0,0,0.3);">
-            <option value="">大数据实验一体化基本</option>
-        </select></li>
-        <li><h3>修 改</h3></li>
+            <select name="" id="" style="color: rgba(0,0,0,0.3);">
+                <option value="">大数据实验一体化基本</option>
+            </select></li>
+        <li class="Cyj_change"><h3>修 改</h3></li>
     </ul>
 </div>
 </body>
 </html>
 <script>
-    let add=document.querySelector(".Cyj_search .Cyj_add");
-    let change=document.querySelectorAll(".Cyj_gai");
-    let zhezhao=document.querySelectorAll(".Cyj_zhezhao");
-    let close=document.querySelectorAll(".Cyj_zhezhao h2 img");
+    let add = document.querySelector(".Cyj_search .Cyj_add");
+    // let change = document.querySelectorAll(".Cyj_gai");
+    let zhezhao = document.querySelectorAll(".Cyj_zhezhao");
+    let close = document.querySelectorAll(".Cyj_zhezhao h2 img");
+    let inputs = document.querySelector(".Cyj_zhezhao input");
+    let text = document.querySelector(".Cyj_zhezhao textarea");
+    let adds = document.querySelector(".Cyj_zhezhao ul li:nth-child(7)");
+    let xiala=document.querySelector(".Cyj_zhezhao select");
+    let index=xiala.selectedIndex;
+    // let opation=xiala[index].value;
+    let tabel = document.querySelector("tbody");
+    let del=document.querySelectorAll(".Cyj_del");
+    let change=document.querySelector(".Cyj_change");
+    let inputs1 = document.querySelector(".Cyj_zhezhao1 input");
+    let text1 = document.querySelector(".Cyj_zhezhao1 textarea");
+    let xiala1=document.querySelector(".Cyj_zhezhao1 select");
+    let index1=xiala.selectedIndex;
+    // console.log(inputs1,text1,xiala1);
+
+    adds.onclick=function () {
+        let obj={name:inputs.value,jieshao:text.value,con:xiala[index].text};
+        // console.log(obj);
+        createTr(obj);
+        inputs.value="";
+        text.value="";
+        zhezhao[0].style.display="none";
+    }
+
+    tabel.ondblclick=function (e) {
+        let element=e.target;
+        if(element.nodeName=="BUTTON"&&element.className=="Cyj_del"){
+            let trs=element.parentNode.parentNode;
+            // console.log(trs);
+            tabel.removeChild(trs);
+        }
+        else if(element.nodeName=="BUTTON"&&element.className=="Cyj_gai"){
+                zhezhao[1].style.display = "block";
+                change.onclick=function(){
+                    let obj={name:inputs1.value,jieshao:text1.value,con:xiala1[index1].text};
+                    let trs=element.parentNode.parentNode;
+                    console.log(trs);
+                    trs.firstElementChild.innerHTML=obj.name;
+                    trs.firstElementChild.nextSibling.innerHTML=obj.jieshao;
+                    trs.firstElementChild.nextSibling.nextSibling.innerHTML=obj.jieshao;
+                    // console.log(trs.firstElementChild.innerHTML=obj.name);
+                    inputs.value="";
+                    text.value="";
+                    zhezhao[1].style.display="none";
+
+                }
+                close[1].onclick = function () {
+                    zhezhao[1].style.display = "none";
+                }
+
+        }
+    }
+
+
+
+    function createTr(obj) {
+        let str = `<tr>
+                        <td>${obj.name}</td>
+                        <td>${obj.jieshao}</td>
+                        <td>${obj.con}</td>
+                        <td><button class="Cyj_sou">下载</button></td>
+                        <td class="Cyj_first">
+                            <button class="Cyj_del" style="background-color: #f4f4f4; margin-right:20px;">删除</button>
+                            <button class="Cyj_gai" style="cursor: pointer">修改</button></td>
+                        </tr>`;
+        tabel.innerHTML+=str;
+    }
+
+    // console.log(inputs, text,adds,tabel);
     // console.log(add, change,zhezhao,close);
-    add.onclick=function () {
-        zhezhao[0].style.display="block";
-        close[0].onclick=function () {
-            zhezhao[0].style.display="none";
+    add.onclick = function () {
+        zhezhao[0].style.display = "block";
+        close[0].onclick = function () {
+            zhezhao[0].style.display = "none";
         }
     }
-    change[0].onclick=function () {
-        zhezhao[1].style.display="block";
-        close[1].onclick=function () {
-            zhezhao[1].style.display="none";
-        }
-    }
+    // change.onclick = function () {
+    //     zhezhao[1].style.display = "block";
+    //     close[1].onclick = function () {
+    //         zhezhao[1].style.display = "none";
+    //     }
+    // }
 </script>
