--- a/ziyuanguanli1.html
+++ b/ziyuanguanli1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>资源管理</title>
     <link rel="stylesheet" href="css/ziyuan3.css">
+    <script src="js/ziyuantable.js"></script>
+
 
 </head>
 <body>
@@ -59,10 +61,8 @@
 
                     </select>
                     <h3 style="font-size: 14px;font-weight: normal;">日期</h3>
-                    <div class="Zyx_content3">
-
-                    </div>
-                    <button class="Zyx_content4">搜索记录</button>
+                    <input type="date" class="Zyx_content3">
+                    <button class="Zyx_content4"><h4>搜索记录</h4></button>
                     <!-- <div class="Zyx_content4">
                         <h3 style="font-size: 14px;">搜索记录</h3>
 
@@ -71,7 +71,7 @@
 
             </div>
             <div class="Zyx_content_two">
-                <table>
+                <table cellspacing="0">
                     <tr>
                         <td>服务类型</td>
                         <td>购买时间</td>
@@ -100,23 +100,23 @@
                         <td>2015230140</td>
                         <td>江泽民</td>
                         <td>已收</td>
-                        <td class="Zyx_sou"><button >删除</button></td>
+                        <td class="Zyx_sou"><button class="" >删除</button></td>
 
                     </tr>
                     <tr>
-                        <td>购买</td>
-                        <td>2018-7-21</td>
-                        <td>2018-7-21</td>
-                        <td>2018-7-21</td>
-                        <td>6</td>
-                        <td>小</td>
-                        <td>699</td>
-                        <td>教材</td>
-                        <td>XX公司</td>
-                        <td>2015230140</td>
-                        <td>江泽民</td>
-                        <td>已收</td>
-                        <td class="Zyx_sou"><button >删除</button></td>
+                        <td class="">购买</td>
+                        <td class="">2018-7-21</td>
+                        <td class="">2018-7-21</td>
+                        <td class="">2018-7-21</td>
+                        <td class="">6</td>
+                        <td class="">小</td>
+                        <td class="">699</td>
+                        <td class="">教材</td>
+                        <td class="">XX公司</td>
+                        <td class="">2015230140</td>
+                        <td class="">江泽民</td>
+                        <td class="">已收</td>
+                        <td class="Zyx_sou "><button >删除</button></td>
 
                     </tr>
                     <tr>
