--- a/ziyuanguanli3.html
+++ b/ziyuanguanli3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>公共样式</title>
     <link rel="stylesheet" href="css/gg-zyx.css">
+    <script src="js/ziyuantable - 2.js"></script>
+
 
     <!--<link rel="stylesheet" href="css/ziyuan3.css">-->
 
