--- a/usermanage.html
+++ b/usermanage.html
@@ -247,6 +247,13 @@
         // if ()
         tk1.style.display = "none";
         form.style.display = "none";
+        inpts[0].value="";
+        inpts[1].value="";
+        inpts[2].value="";
+        inpts[3].value="";
+        inpts[4].value="";
+        inpts[5].value="";
+        inpts[6].value="";
         function reloadPage(){
             location.reload()
         }
